# BonsaiKV

./: .gitignore  Experiment.md  Makefile.inc  README.en.md  README.md  bonsai.h  commen.h  experiment.md  pull_make.sh  remake.sh
data/: kvdata.h  string.xlsx  un_uint64.xlsx  vp.xlsx  zp_uint64.xlsx
docs/: Bonsai Design.md  BuddyTableDesign.md  MappingTableDesign.md  MeasurementNoiseElimination.md  Run.md  Techniques.md
driver/: Makefile
driver/include/: atomic.h  bench.h  limit.h  op.h  rand.h  schema.h  schema_tatp.h  schema_tpcc.h  tpcc.h  transcat.h  types.h  workload.h
driver/sample/: main.c  skiplist.c  skiplist.h
driver/src/: bench.c  rand.c  tatp.c  tpcc.c  workload.c
evaluation/: ex.md
evaluation/contention/: .data  run
evaluation/kvstore/: Evaluation Scheme.md  Makefile  README.md  experiment.md
evaluation/kvstore/compressor/: compressor.c
evaluation/kvstore/data/: ycsb_a_load.py  ycsb_a_load_16kbval.py  ycsb_a_load_248bval.py  ycsb_a_load_8bval.py  ycsb_a_op.py
evaluation/kvstore/data/final/: eval_coherence_protocol.py  eval_index_tech.py  eval_log_persist_tech.py  eval_scalability_tech.py  eval_scalability_tech_stripe_size.py  (+22 more)
evaluation/kvstore/include/: config.h  db.h  limit.h  loader.h  runner.h  schema_tatp.h  schema_tpcc.h
evaluation/kvstore/lib/pacman/example/: CMakeLists.txt
evaluation/kvstore/lib/pactree/src/: CMakeLists.txt  SearchLayer.h  WorkerThread.cpp  adapter.cpp  pactree.cpp
evaluation/kvstore/sample/: main.c  skiplist.c  skiplist.h
evaluation/kvstore/src/: compressor.c  loader.c  main.c  runner.c  tatp.c  tpcc.c  ycsb.c
evaluation/nvm_interleave_granularity/: plot.py  test.c
evaluation/nvm_interleave_granularity/.data/: data_512
evaluation/nvm_interleave_granularity/data/: data_1024  data_2048  data_256  data_4096  data_512
evaluation/pmem_idiosyncrasies/contention/: run
evaluation/pmem_idiosyncrasies/nvm_interleave_granularity/: arch.h  at.h  config.h  main.c  plot.py  test.c
evaluation/pmem_idiosyncrasies/prior_test/: .gitignore  data  measure.h  test.c
evaluation/prior_test/: main.c  pool.c  pool.h  unmount.sh
example/: Makefile  example.c
experiment/nvm_interleave_granularity/: .gitignore  CMakeLists.txt  arch.h  at.h  config.h  main.c  mount.sh  plot.py  pool.c  pool.h  test.c
experiment/prior_test/: CMakeLists.txt  arch.h  pool.c  pool.h  test.c
inc/: arch.h  atomic.h  bitmap.h  bonsai.h  common.h  cuckoo_hash.h  hash.h  list.h  mtable.h  oplog.h  pmem.h  pnode.h  spinlock.h  thread.h
include/: arch.h  atomic.h  atomic128.h  atomic128_2.h  bitmap.h  bonsai.h  cmp.h  cna.h  common.h  config.h  counter.h  cpu.h  crc.h  data_layer.h  dtx.h  epoch.h  hash.h  hash_set.h  hp.h  hwconfig.h  index_layer.h  kfifo.h  libpmemobj.h  link_list.h  list.h  log_layer.h  long_key.h  main  mcs4.h  mptable.h  mtable.h  nab.h  numa.h  numa_config.h  numa_util.h  oplog.h  ordo.h  pcm.h  per_node.h  pmem.h  (+11 more)
index/: .remake  Makefile  Makefile.inc  bench.c  bench.h  bptree.c  bptree.h  clean.sh  fast_fair.c  fast_fair.h  ffwrapper.cpp  ffwrapper.h  gen_arr.sh  gen_data.cpp  gen_data.sh  gen_workload.py  index.c  kv  kv.c  kv.h  kvdata.c  list_threads.sh  main.c  plot_distribution.py  remake.sh  skiplist.c  skiplist.h  workload_config.inp
index-microbench/: __gen_data.sh  gen_all.sh  gen_data.c  gen_workload.py  gen_workload_str.py  kvdata.c  run_all.sh  workload_config.inp
index-microbench/YCSB/workloads/: workload_template  workloadb  workloadd  workloade  workloadf
index-microbench/compressor/: Makefile  compressor.c  compressor.h  decompressor.c  decompressor.h
index-microbench/data/: strv_sample_load_monoint_workloada.h  strv_sample_load_monoint_workloada.h_key  strv_sample_load_monoint_workloada.h_val  strv_sample_op_monoint_workloada.h  strv_sample_op_monoint_workloada.h_key  strv_sample_op_monoint_workloada.h_type  strv_sample_op_monoint_workloada.h_val
index-microbench/workload_spec/: workload_template  workloada  workloadb  workloade  workloadf
index-microbench/workloads/: load_monoint_workloada  txn_monoint_workloada
index/bench/: bench.c  bench.h  kvdata.h  map.c
index/bptree/: Makefile  bptree.c  bptree.h  test  test.c
index/concurrent/: Makefile  main
index/concurrent/src/: btree.h  test.cpp
index/concurrent_pmdk/: Makefile  btree  clean.sh  remake.sh
index/concurrent_pmdk/src/: btree.h  test.cpp
index/fastfair_dram/: Makefile  fastfair_dram
index/fastfair_dram/src/: btree.h  ff.cpp
index/fastfair_nvm/: Makefile
index/fastfair_nvm/src/: ff.cpp
index/masstree/: .gitignore  Makefile  remake.sh
index/masstree/src/: index.c  masstree.c  masstree.h  utils.h
index/splithash_dram/: Makefile
index/splithash_dram/src/: common.h  hash_set.c  hash_set.h  hp.c  link_list.c  link_list.h
index/worehole/: Makefile  wh.c  worehole
index/worehole/src/: Makefile  index.c  wh.c
index/wormhole/src/: Makefile.common  wh.c
script/: devdax_setup.sh  dimm_interleave_setup.sh  dram_setup.sh  non_interleave_setup.sh  numa_interleave_setup.sh  pmem_setup.sh  pseudo_setup.sh  setup.sh  topology.py
sort/: Makefile  fastsort.c  list_sort.c  sort  sort.c  sort.h
sorting/: list.h  run.sh  sort  sort.c
src/: Makefile  Makefile.inc  adapter.c  bonsai.c  cna.c  counter.c  data_layer.c  data_layer.cc  dtx.c  epoch.c  hash_set.c  hp.c  index_layer.c  index_layer.cc  key.c  kfifo.c  link_list.c  list_sort.c  log_layer.c  log_layer.cc  masstree.c  mcs4.c  mptable.c  mtable.c  nab.c  oplog.c  pcm.cc  per_node.c  pnode.c  rcu.c  recovery.c  region.c  rwlock.c  shim.c  stm.c  thread.c  valman.c
src/masstree-index/: CMakeLists.txt  adapter.cpp
src/masstree-index/src/: main.cpp  phantom_protection.cpp
src/masstree-kohler/: adapter.cpp
src/masstree-kohler/include/: masstree_wrapper.hpp
test/: Makefile  a  hash_set.c  hash_set.h  hp.c  hp.h  link_list.c  link_list.h  main.c  std.cpp
test/benchmark_ycsb/: Makefile  README.md
test/benchmark_ycsb/include/: atomic.h  config.h  loader.h  pcm.h  rand.h  types.h
test/benchmark_ycsb/src/: decompressor.c  main.c  rand.c  runner.c
(+84 files in other folders)
